<resources>
    <string name="app_name">LUOX1180_ASSIGNMENT3-3</string>
    <string name="hello_message">Hello World !</string>
    <string name="click_me">I\' am a button</string>
    <string name="login">login</string>
    <string name="login_name">Login Name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="enter_email">Please enter your email</string>
    <string name="radio_button">Radio Button</string>
    <string name="check_box">Check Box</string>
    <string name="swtich_box">What does this do?</string>
    <string name="dialog_message">Do you want to jump back to the main activity?</string>
    <string name="dialog_title">Information</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="list_response">Here is my response!</string>
    <string name="swtich_on">Switch On!</string>
    <string name="switch_off">Switch Off!</string>
    <string name="btn_start">Start Chart</string>
    <string name="user_start_chat">User clicked Start Chat</string>
    <string name="enter_to_chat">Please Enter to Chat...</string>
    <string name="btn_send">Send</string>
    <string name="user_send_chat">User Sent a Message</string>
    <string name="caller">Caller</string>
    <string name="btnStartToolBar">Test ToolBar</string>
    <string name="title_activity_test_toolbar">Test ToolBar</string>
    <string name="testtoolbar_myname">Ma Luo</string>
    <string name="testtoolbar_lbutton">Send email</string>
    <string name="testtoolbar_back_title">Do you want to go back?</string>
    <string name="testtoolbar_action_one">Action One Selected</string>
    <string name="testtoolbar_action_two">Action Two Selected</string>
    <string name="testtoolbar_action_three">Action Three Selected</string>
    <string name="testtoolbar_action_about">Send email</string>
    <string name="testtoolbar_select_action_one">You selected item 1!</string>
    <string name="main_activity_weather">Weather Forecast</string>
    <string name="main_activity_weather_text">Weather Forecast</string>
    <string name="_weather_activity_default_degree">0 \u00B0C</string>
    <string name="weather_degree">\u00B0C</string>
    <string name="xml_error">XML Parsing Error</string>
    <string name="connection_error">Network Connection Error</string>
    <string name="select_city">Please select a city:</string>
    <string name="weather_postfix">Weather</string>
    <string name="current_temp">Current Temperature:</string>
    <string name="min_temp">Min Temperature:</string>
    <string name="max_temp">Max Temperature:</string>
    <string name="chat_fragment">Fragmented Window</string>
    <string name="chat_message">MessageHere</string>
    <string name="chat_id">ID=</string>
    <string name="chat_del">DELETE THIS MESSAGE</string>
</resources>

