<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/hello_message" />

    <Button
        android:id="@+id/btnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_me" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:onClick="onStartChat"
        />

    <Button
        android:id="@+id/btnStartToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartToolBar"
        android:onClick="onStartTestToolBar"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_city" />

    <Spinner
        android:id="@+id/cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/btnWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_weather"
        android:onClick="onStartWeatherForecast"
        />

</android.widget.LinearLayout>